sms validator - refactor and final version